# crawler_cli

./: .gitignore  README.md  SKILL.md  SWOT.md  pyproject.toml  summary.md
src/crawler_cli/: __init__.py  __main__.py  archive.py  auth.py  backends.py  circuit_breaker.py  compare_renders.py  comparison.py  config.py  csv_urls.py  embeddings.py  engine.py  extract.py  hashing.py  models.py  monitoring.py  persistence.py  probes.py  reports.py  robots.py  schema.py  sitemap.py  variants.py
src/crawler_cli/detection/: __init__.py  cms.py
tests/: test_archive_hygiene.py  test_backends.py  test_circuit_breaker.py  test_cms_detection.py  test_compare_renders.py  test_comparison.py  test_comparison_deep.py  test_csv_auth.py  test_embeddings.py  test_engine.py  test_extract.py  test_hashing.py  test_links.py  test_monitoring.py  test_path_restrictions.py  test_robots_introspection.py  test_schema.py  test_sitemap.py  test_variants.py
