[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler-cli"
version = "0.1.0"
description = "Reusable async crawler module extracted from PostgreSQLCrawlerWIP"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10",
  "asyncpg>=0.29",
  "beautifulsoup4>=4.12",
  "curl_cffi>=0.7.0",
  "defusedxml>=0.7",
  "lxml>=5.2",
]

[project.optional-dependencies]
playwright = [
  "playwright>=1.44",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
crawler-cli = "crawler_cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
